# pdf2md

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  call-graph.md
examples/: _debug_common.py  debug_chunking.py  debug_embeddings.py  debug_extract_markdown.py  debug_ingest.py  debug_qa.py  debug_search.py  debug_vectorstore.py
pdf/: Understanding Lasso – A Novel Lookup Argument Protocol.md
src/: 1Understanding Lasso – A Novel Lookup Argument Protocol.md  Understanding Lasso – A Novel Lookup Argument Protocol.marker.md  mac_rag_pipeline.py
src/pdf2md_rag/: __init__.py  chunking.py  cli.py  config.py  embeddings.py  extractors.py  models.py  pdf_to_markdown.py  pipeline.py  search.py  simple_qa.py  vectorstore.py
tests/: test_chunking.py  test_cli.py  test_examples_scripts.py  test_mac_rag_pipeline.py  test_pdf_to_markdown.py  test_pipeline_smoke.py  test_search.py  test_simple_qa.py  test_vectorstore.py
